# simple-sdl-app

./: .gitignore  CMakeLists.txt  Makefile  README.md
game/: CMakeLists.txt
game/include/game/: Game.h  Input.h  Precompiled.h  Renderer.h  SDLRenderer.h  point.h
game/src/: Game.cpp  Input.cpp  Renderer.cpp  SDLRenderer.cpp
test/: test.cpp
